# ask-codex-sessions

./: .gitignore  Cargo.toml  README.md  install.sh
ask-codex-session-responses/: 20260307T003644Z-Search-Lexical-what-tech-stack-did-we-choose-for-the-session-search-tool.json  20260307T003754Z-Search-Lexical-what-tech-stack-did-we-choose-for-the-session-search-tool.json  20260307T023416Z-Search-Lexical-what-tech-stack-did-we-choose-for-the-session-search-tool.json  20260307T023647Z-Search-Lexical-what-tech-stack-did-we-choose-for-the-session-search-tool.json  20260307T023830Z-Search-Lexical-what-tech-stack-did-we-choose-for-the-session-search-tool.json  20260307T023947Z-Search-Lexical-what-tech-stack-did-we-choose-for-the-session-search-tool.json  20260307T024140Z-Search-Lexical-what-tech-stack-did-we-choose-for-the-session-search-tool.json  20260307T024255Z-Search-Lexical-what-tech-stack-did-we-choose-for-the-session-search-tool.json  20260307T024343Z-Search-Lexical-what-tech-stack-did-we-choose-for-the-session-search-tool.json  20260307T024501Z-Search-Lexical-what-tech-stack-did-we-choose-for-the-session-search-tool.json  20260307T024539Z-Search-Lexical-what-tech-stack-did-we-choose-for-the-session-search-tool.json
plans/: ask-codex-session-search-plan.md
src/: cli.rs  config.rs  debug.rs  gemini.rs  index.rs  lib.rs  main.rs  normalize.rs  output.rs  search.rs  source.rs  types.rs
tests/: cli_contract.rs  config_defaults.rs  corrupted_search.rs  debug_trace.rs  gemini_synthesis.rs  index_build.rs  lexical_mode.rs  llm_search_mode.rs  output_contract.rs  (+4 more)
(+8 files in other folders)
