[package]
name = "ask-codex-sessions"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled-full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "macros"] }

[dev-dependencies]
tempfile = "3.23.0"
